Fixing up ca Crt fetcher in X509ReaderWriter